--- a/css/style.css
+++ b/css/style.css
@@ -9674,3 +9674,29 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+
+.skills-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 20px;
+    margin-top: 20px;
+}
+.skill-item {
+    text-align: center;
+    width: 100px;
+    margin-bottom: 20px;
+}
+.skill-item span {
+    display: block;
+    font-size: 12px;
+    font-weight: bold;
+    color: #333;
+    margin-top: 5px;
+}
+h3 {
+    color: #333;
+    margin-bottom: 15px;
+    font-size: 18px;
+}    
